tests/preproc_samples/valid/inline_macros/expected.mas
# Labels:
# name - address - parent



# Macroinstructions:
%i i {
    a | b | c @l;
    a | a | b | c | a | b | d | e @l;
    a | a | a | b | c | a | b | d;
    a | b | c | a | a | b | c;
    a | b | c | a | a | b | c | a | b | a @l;
}

