tests/preproc_samples/invalid/multiline_macros_used_as_inline.mas
%m m {
    a;
}

%i i {
    m | b;
    m;
}